another try to stop the overflow on phone

--- a/level_style.css
+++ b/level_style.css
@@ -140,6 +140,7 @@ p {
     user-select: none;
     min-width: 0;
     min-height: 0;
+    overflow:hidden;
 }
 
 .game-tile {
